src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated: Include in Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPurchaseAnalysisAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Analysis Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Purchase Analysis Account)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesRevenueAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general ledger account to which sales revenues for this product be posted.</description>
        <label>Sales Revenue Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxRule__c</fullName>
        <label>External Sales Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>